--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon (2).ico">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
-    <title>Oliver Sibinovski - Full-Stack Web Developer</title>
+    <title>Oliver Sibinovski - Front-End Web Developer</title>
 </head>
 <body>
     <!--ScrollButtonLight-->
@@ -19,9 +19,8 @@
         </section>
         <div class="top-container">
             <h1>Hi, I'm Oliver.</h1>
-            <p>a Full-Stack Web Developer.</p>  
+            <p>a Front-End Web Developer.</p>  
           <p>based in Toronto,Canada. I have a passion for web developing and love to code..</p> 
-            <p>I'm a developer, so I know how to create your website<br> to run across devices using the latest technologies available.</p>
         <script type="text/javascript">
            var side1 = document.getElementById("side1")
            window.addEventListener("scroll", function(){
@@ -71,28 +70,6 @@
             <div class="imgBox">
                 <img src="Images/tindog.png">
             </div>
-        <div class="content">
-            <h2>TinDog Website</h2>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imgBox">
-                <img src="Images/COMING.png">
-            </div>
-        <div class="content">
-            <h2>TinDog Website</h2>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imgBox">
-                <img src="Images/COMING.png">
-            </div>
-        <div class="content">
-            <h2>TinDog Website</h2>
-            </div>
-        </div>
-    </div>
-
     </div>
     <div class="footer-container">
         <div id="scroll-progress"></div>
@@ -110,7 +87,6 @@
           <p class="p-big">If you have a project that you want to get started, think you need my help<br>with something or just fancy saying hey, then get in touch.</p>
           <a class="btn" href="mailto:olisbinovski@icloud.com">MESSAGE ME</a>
         <a class="footer-link" href="https://www.linkedin.com/in/oliversibinovski/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/oliverluxen">Twitter</a>
         <a class="footer-link" href="https://github.com/oliversibin">GitHub</a>
         <p>© 2020 Oliver Sibinovski.</p>
       </div>
